--- a/TournoisAllExe/TournoisAllExe.vbproj
+++ b/TournoisAllExe/TournoisAllExe.vbproj
@@ -48,7 +48,7 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>PerfCenterCpl.ico</ApplicationIcon>
+    <ApplicationIcon>logo_cfa.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -139,6 +139,7 @@
     <None Include="Resources\TimerAlbinton.exe" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="logo_cfa.ico" />
     <Content Include="PerfCenterCpl.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
